Fix pagination when there is only one element (next/previous) visible on page

--- a/src/theme/PaginatorNavLink/styles.module.css
+++ b/src/theme/PaginatorNavLink/styles.module.css
@@ -9,7 +9,7 @@
 }
 
 [class*="pagination-nav"] {
-  display: flex;
+  display: grid;
   justify-content: space-between;
 
   /* Reset default grid properties. */
